third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pin_data/missing_pin.stderr
error[E0277]: the trait bound `impl PinInit<usize>: Init<usize, _>` is not satisfied
  --> tests/ui/compile-fail/pin_data/missing_pin.rs:12:18
   |
12 |             a <- a,
   |             -    ^ the trait `Init<usize, _>` is not implemented for `impl PinInit<usize>`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `Init<usize, _>` is not implemented for `impl PinInit<usize>`
      but trait `Init<impl PinInit<usize>, Infallible>` is implemented for it
  --> src/lib.rs
   |
   | unsafe impl<T> Init<T> for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `impl PinInit<usize>`, found `usize`
note: required by a bound in `__ThePinData::a`
  --> tests/ui/compile-fail/pin_data/missing_pin.rs:4:1
   |
 4 | #[pin_data]
   | ^^^^^^^^^^^ required by this bound in `__ThePinData::a`
 5 | struct Foo {
 6 |     a: usize,
   |     - required by a bound in this associated function
   = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
